add data presentation

--- a/module-1/variability.ipynb
+++ b/module-1/variability.ipynb
@@ -5,7 +5,7 @@
    "id": "2d9bc94b",
    "metadata": {},
    "source": [
-    "# Module 1.2. Measures of Variability\n",
+    "# Measures of Variability\n",
     "\n",
     "**Ukuran Penyebaran** adalah kumpulan statistik yang mengukur sejauh mana data tersebar atau bervariasi dari nilai tengah atau rata-rata. Ini memberikan informasi tentang seberapa heterogen atau homogen distribusi data. Beberapa ukuran variabilitas termasuk Rentang (Range), Varians (Variance), dan Deviasi Standar (Standard Deviation). Masing-masing dari ukuran ini memberikan perspektif berbeda tentang sebaran data.\n",
     "\n",
