--- a/module-1/central_tendency.ipynb
+++ b/module-1/central_tendency.ipynb
@@ -5,7 +5,7 @@
    "id": "f1ef7202",
    "metadata": {},
    "source": [
-    "# Module 1.1. Measures of Central Tendency"
+    "# Measures of Central Tendency"
    ]
   },
   {
