--- a/final-project/Coba-EDA.ipynb
+++ b/final-project/Coba-EDA.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6256d7bf",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>5545</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>288.28</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -148,7 +148,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>4516</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>289.36</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -160,7 +160,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4767</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>289.58</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -172,7 +172,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>5026</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>290.13</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -184,7 +184,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4918</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>291.14</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -208,7 +208,7 @@
        "    <tr>\n",
        "      <th>48199</th>\n",
        "      <td>3543</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>283.45</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -220,7 +220,7 @@
        "    <tr>\n",
        "      <th>48200</th>\n",
        "      <td>2781</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>282.76</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -232,7 +232,7 @@
        "    <tr>\n",
        "      <th>48201</th>\n",
        "      <td>2159</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>282.73</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -244,7 +244,7 @@
        "    <tr>\n",
        "      <th>48202</th>\n",
        "      <td>1450</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>282.09</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -256,7 +256,7 @@
        "    <tr>\n",
        "      <th>48203</th>\n",
        "      <td>954</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>282.12</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -272,17 +272,17 @@
       ],
       "text/plain": [
        "       traffic_volume holiday    temp  rain_1h  snow_1h  clouds_all  \\\n",
-       "0                5545    None  288.28      0.0      0.0          40   \n",
-       "1                4516    None  289.36      0.0      0.0          75   \n",
-       "2                4767    None  289.58      0.0      0.0          90   \n",
-       "3                5026    None  290.13      0.0      0.0          90   \n",
-       "4                4918    None  291.14      0.0      0.0          75   \n",
+       "0                5545     NaN  288.28      0.0      0.0          40   \n",
+       "1                4516     NaN  289.36      0.0      0.0          75   \n",
+       "2                4767     NaN  289.58      0.0      0.0          90   \n",
+       "3                5026     NaN  290.13      0.0      0.0          90   \n",
+       "4                4918     NaN  291.14      0.0      0.0          75   \n",
        "...               ...     ...     ...      ...      ...         ...   \n",
-       "48199            3543    None  283.45      0.0      0.0          75   \n",
-       "48200            2781    None  282.76      0.0      0.0          90   \n",
-       "48201            2159    None  282.73      0.0      0.0          90   \n",
-       "48202            1450    None  282.09      0.0      0.0          90   \n",
-       "48203             954    None  282.12      0.0      0.0          90   \n",
+       "48199            3543     NaN  283.45      0.0      0.0          75   \n",
+       "48200            2781     NaN  282.76      0.0      0.0          90   \n",
+       "48201            2159     NaN  282.73      0.0      0.0          90   \n",
+       "48202            1450     NaN  282.09      0.0      0.0          90   \n",
+       "48203             954     NaN  282.12      0.0      0.0          90   \n",
        "\n",
        "       weather_main     weather_description         date_time  \n",
        "0            Clouds        scattered clouds  02-10-2012 09:00  \n",
@@ -300,7 +300,7 @@
        "[48204 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
